--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,446 +1,573 @@
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
-    --green : #029656;
-    --red : #d43f3f;
-    --orange: #db933b;
-    --box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+  --green: #0fc756;
+  --red: tomato;
+  --yellow: #ffd95b;
+  --orange: #db933b;
+  --blue: #4193f8;
+  --dark-blue: #2f80ed;
+  --placeholder: #919eaa;
+  --primary: #fff;
+  --primary-light: #6e7681;
+  --secondary: #21262d;
+  --secondary-light: #2c333b;
+  --secondary-dark: #161b22;
+  --tertiary: #0d1117;
+  --tertiary-light: #141a24;
+  --border: #292e36;
+  --border-light: #21262d;
+  --box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
 }
 
 * {
-    box-sizing: border-box;
-    outline: none;
+  box-sizing: border-box;
+  outline: none;
 }
 
 ::-webkit-scrollbar {
-    width: 3px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
-
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #4193F8;
+  background: var(--blue);
+  border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #2F80ED;
+  background: var(--dark-blue);
 }
 
 body {
-    margin: 0;
-    padding: 5px;
-    font-family: Arial, sans-serif;
-    background-color: #0D1117;
-    color: #C9D1D9;
+  margin: 0;
+  padding: 5px;
+  font-family: Arial, sans-serif;
+  background-color: var(--tertiary);
+  color: var(--primary);
 }
 
 select {
-    width: 155px;
-    height: 30px;
-    padding: 0 5px;
-    background-color: #21262D;
-    border: 1px solid #292E36;
-    color: #C9D1D9;
-    transition: 0.2s;
-    border-radius: 2px;
-    margin-top: 5px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  width: 155px;
+  height: 30px;
+  background-color: var(--secondary);
+  border: 1px solid var(--border);
+  color: var(--primary);
+  transition: 0.2s;
+  border-radius: 2px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 select:hover:not(:disabled) {
-    background-color: #292E36;
-    cursor: pointer;
-    transition: 0.2s;
+  background-color: var(--secondary-light);
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 select option {
-    background-color: #21262D;
-    color: #C9D1D9;
-    border-radius: none;
-    width: auto;
+  background-color: var(--secondary);
+  color: var(--primary);
+  border-radius: none;
+  width: auto;
 }
 
 button {
-    width: auto;
-    height: 30px;
-    padding: 0 15px;
-    margin-left: 20px;
-    background-color: #21262D;
-    border: 1px solid #292E36;
-    color: #C9D1D9;
-    transition: 0.2s;
-    border-radius: 2px;
+  width: auto;
+  height: 30px;
+  padding: 0 15px;
+  background-color: var(--secondary);
+  border: 1px solid var(--border);
+  color: var(--primary);
+  transition: 0.2s;
+  border-radius: 2px;
 }
 
 button:hover:not(:disabled) {
-    background-color: #292E36;
-    cursor: pointer;
-    transition: 0.2s;
+  background-color: var(--secondary-light);
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 .container {
-    display: inline-block;
-    padding-top: 15px;
-    padding-right: 20px;
-    padding-left: 25px;
-    height: 90px;
-}
-
-.spacer {
-    margin-top: 5px;
-    border-bottom: 1px solid #20252B;
-}
-
-.container:nth-child(2) {
-    border-left: 1px dashed #20252B;
+  display: inline-block;
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-left: 25px;
+  height: 90px;
 }
 
 .container div p {
-    margin: 0;
-    padding: 4px 5px;
-    margin-left: 25px;
+  margin: 0;
+  padding: 4px 5px;
+  margin-left: 25px;
 }
 
 .font-small {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .loading-icon {
-    position: absolute;
-    font-size: 20px;
-    margin-top: 3px;
-    animation: spin 2s linear infinite;
-    color: #fcca26;
-    display: none;
+  position: absolute;
+  font-size: 20px;
+  margin-top: 3px;
+  animation: spin 2s linear infinite;
+  display: none;
 }
 
 .success-icon {
-    position: absolute;
-    font-size: 20px;
-    margin-top: 2px;
-    color: #28a745;
-    display: none;
+  position: absolute;
+  font-size: 20px;
+  margin-top: 2px;
+  display: none;
 }
 
 .cancel-icon {
-    position: absolute;
-    font-size: 20px;
-    margin-top: 2px;
-    color: grey;
+  position: absolute;
+  font-size: 20px;
+  margin-top: 2px;
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 #inputs {
-    margin-top: 5px;
-    margin-left: 15px;
-    width: 240px;
-    display: none;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+  align-content: space-around;
+  flex-direction: column;
 }
 
 #inputs .section {
-    display: block;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    margin-right: 18px;
-    padding-left: 15px;
-    border-bottom: 1px solid #21262D;
+  display: block;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--border);
+}
+
+/* Do not display the section border if it's the last section */
+#inputs .section:last-child {
+  border-bottom: none;
 }
 
 .input-name {
-    color: #C9D1D9;
-    font-size: 15px;
-    font-weight: 600;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  color: var(--primary);
+  font-size: 15px;
+  font-weight: 600;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .input-description {
-    color: #919eaa;
-    font-size: 13px;
-    margin-top: -10px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  color: var(--placeholder);
+  font-size: 13px;
+  margin-top: -10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#logs-container {
+  position: absolute;
+  top: 90px;
+  bottom: 75px;
+  left: 250px;
+  right: 0;
+  border-left: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
+}
+
+#logs {
+  height: 100%;
+  background-color: var(--tertiary-light);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.log {
+  padding: 2px 15px;
+  margin-left: 10px;
+}
+
+.log-content {
+  line-height: 1.2;
+  color: var(--placeholder);
+  font-size: 12px;
+}
+
+.log-date {
+  color: var(--primary);
+  font-size: 11px;
 }
 
 input {
-    width: 200px;
-    height: 30px;
-    padding: 0 10px;
-    background-color: #21262D;
-    border: 1px solid #292E36;
-    color: #C9D1D9;
-    transition: 0.2s;
+  width: 200px;
+  height: 30px;
+  padding: 0 10px;
+  background-color: var(--secondary);
+  border: 1px solid var(--border);
+  color: var(--primary);
+  transition: 0.2s;
 }
 
 input::placeholder {
-    color: rgba(145, 158, 170, 0.514);
+  color: rgba(145, 158, 170, 0.514);
 }
 
 input:hover:not(:disabled) {
-    background-color: #292E36;
-    transition: 0.2s;
-    border: 1px solid rgba(65, 147, 248, 0.445);
+  background-color: var(--secondary-light);
+  transition: 0.2s;
+  border: 1px solid rgba(65, 147, 248, 0.445);
 }
 
 input:focus:not(:disabled) {
-    background-color: #292E36;
-    border: 1px solid #4193F8;
-    transition: 0.2s;
+  background-color: var(--secondary-light);
+  border: 1px solid var(--blue);
+  transition: 0.2s;
 }
 
 #inputs-container {
-    position: absolute;
-    top: 100px;
-    bottom: 0;
-    left: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-right: 1px dashed #20252B;
+  position: absolute;
+  top: 90px;
+  left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  bottom: 75px;
+  width: 250px;
+  display: none;
+}
+
+#nav-container {
+  top: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  z-index: 1000;
+  background-color: var(--tertiary);
+  border-bottom: 1px solid var(--border);
 }
 
 #output-container {
-    position: absolute;
-    top: 110px;
-    bottom: 0;
-    left: 265px;
-    right: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: 350px;
-    height: 40px;
-    border: 1px solid #292E36;
-    margin-left: 15px;
-    margin-top: 15px;
-    border-radius: 2px;
-    display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 75px;
+  display: inline;
 }
 
 #output {
-    height: 100%;
-    background-color: #21262D;
+  height: 100%;
+  background-color: var(--secondary);
 }
 
 input[type="checkbox"] {
-    scale: 1.3;
-    width: auto;
-    margin-top: -10px;
+  scale: 1.3;
+  width: auto;
+  margin-top: -10px;
+  border-radius: 0px;
 }
 
 input[type="text"] {
-    margin-bottom: 10px;
-    border-radius: 2px;
+  margin-bottom: 10px;
+  border-radius: 2px;
 }
 
 input[type="number"] {
-    margin-bottom: 10px;
-    border-radius: 2px;
+  margin-bottom: 10px;
+  border-radius: 2px;
 }
 
 .input-label {
-    position: absolute;
-    color: #C9D1D9;
-    font-size: 13px;
-    margin-top: -2px;
-    margin-left: 5px;
+  position: absolute;
+  color: var(--placeholder);
+  font-size: 13px;
+  margin-top: -2px;
+  margin-left: 5px;
 }
 
 #status-text {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    color: #919eaa;
-    font-size: 13px;
+  position: absolute;
+  top: 25px;
+  right: 45px;
+  color: var(--placeholder);
+  font-size: 15px;
 }
 
 #timer {
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    color: #C9D1D9;
-    font-size: 13px;
+  position: absolute;
+  top: 25px;
+  left: 10px;
+  color: var(--primary);
+  font-size: 15px;
 }
 
 #progress-bar {
-    position: absolute;
-    top: 7px;
-    left: 10px;
-    right: 32px;
-    border-radius: 5px;
-    height: 5px;
-    background-color: #292E36;
-    border: 1px solid #292E36;
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  right: 45px;
+  border-radius: 5px;
+  height: 8px;
+  background-color: var(--secondary-dark);
+  border: 1px solid var(--border);
 }
 
 #progress {
-    height: 100%;
-    width: 25%;
-    background-color: #4193F8;
-    border-radius: 5px;
-    transition: 1s;
+  height: 100%;
+  width: 0;
+  background-color: var(--blue);
+  border-radius: 5px;
+  transition: 1s;
 }
 
 #workflow-cancel-run-icon {
-    color: grey;
-    right: 10px;
-    font-size: 14px;
+  top: 10px;
+  right: 10px;
+  font-size: 22px;
 }
 
 #workflow-cancel-run-icon:hover {
-    color: tomato;
-    cursor: pointer;
+  color: var(--red);
+  cursor: pointer;
 }
 
 .notification {
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-    background: #21262D;
-    color: #C9D1D9;
-    padding: 5px 10px;
-    box-shadow: var(--box-shadow);
-    z-index: 1000;
-    border-right: 5px solid transparent;
-    font-size: 12px;
-    line-height: 1.5;
+  position: fixed;
+  bottom: 100px;
+  right: 25px;
+  background: var(--secondary);
+  color: var(--primary);
+  padding: 5px 10px;
+  box-shadow: var(--box-shadow);
+  z-index: 1000;
+  border-right: 5px solid transparent;
+  font-size: 12px;
+  line-height: 1.5;
 }
 
 .notification-info {
-    border-right: 5px solid #4193F8;
+  border-right: 5px solid var(--blue);
 }
 
 .notification-error {
-    border-right: 5px solid var(--red);
+  border-right: 5px solid var(--red);
 }
 
 .notification-success {
-    border-right: 5px solid var(--green);
+  border-right: 5px solid var(--green);
 }
 
 .notification-warning {
-    border-right: 5px solid var(--orange);
+  border-right: 5px solid var(--orange);
+}
+
+.select-container {
+  display: inline-block;
+  flex-direction: column;
+  padding: 10px;
+  margin-bottom: 5px;
+  max-width: 300px;
+}
+
+#start-workflow {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+
+.select-container select {
+  margin-top: 10px;
+  margin-left: 5px;
+  text-indent: 5px;
+}
+
+.select-container .icons {
+  display: flex;
+  padding: 3px;
+}
+
+.select-container .select-title {
+  padding-left: 30px;
+}
+
+.yellow {
+  color: var(--yellow);
+}
+
+.blue {
+  color: var(--blue);
+}
+
+.green {
+  color: var(--green);
+}
+
+.red {
+  color: var(--red);
+}
+
+.red-highlight {
+  background-color: rgba(255, 39, 0, 0.45)
+}
+
+.white {
+  color: var(--primary);
+}
+
+.grey {
+  color: var(--primary-light);
+}
+
+.orange {
+  color: var(--orange);
+}
+
+#extend-logs-left, #extend-logs-right {
+  z-index: 1000;
+  position: absolute;
+  scale: 1;
+  transform: translate(-50%, -50%);
+  top: calc(50% - 20px);
+  font-weight: 600;
+  color: var(--primary);
+}
+
+#extend-logs-right {
+    display: none;
+    margin-left: 10px;
+}
+
+#extend-logs-left {
+    margin-left: 18px;
+}
+
+#extend-logs-left:hover, #extend-logs-right:hover {
+  cursor: pointer;
+  color: #d4d4d4;
+}
+
+@media only screen and (min-width: 981px) {
+    #extend-logs-left, #extend-logs-right {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 430px) {
+  #inputs-container {
+    top: 140px;
+  }
+
+  #logs-container {
+    top: 140px;
+    left: 250px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  #inputs-container {
+    top: 180px;
+  }
+
+  #logs-container {
+    top: 180px;
+    left: 250px;
+  }
 }
 
 @media only screen and (max-width: 980px) {
-    .notification {
-        right: 0;
-        left: 50%;
-        bottom: 100px;
-        font-size: 12px;
-    }
+  .notification {
+    right: 0;
+    left: 50%;
+    bottom: 100px;
+    font-size: 12px;
+  }
 
-    .notification-info {
-        border: none;
-        border-left: 5px solid #4193F8;
-    }
+  .notification-info {
+    border: none;
+    border-left: 5px solid var(--blue);
+  }
 
-    .notification-error {
-        border: none;
-        border-left: 5px solid var(--red);
-    }
+  .notification-error {
+    border: none;
+    border-left: 5px solid var(--red);
+  }
 
-    .notification-success {
-        border: none;
-        border-left: 5px solid var(--green);
-    }
+  .notification-success {
+    border: none;
+    border-left: 5px solid var(--green);
+  }
 
-    .notification-warning {
-        border: none;
-        border-left: 5px solid var(--orange);
-    }
+  .notification-warning {
+    border: none;
+    border-left: 5px solid var(--orange);
+  }
 
-    #inputs-container {
-        top: 100px;
-        bottom: 75px;
-        left: 0;
-        right: 0;
-    }
+  .container {
+    padding-right: unset;
+  }
 
-    .container:nth-child(2) {
-        border-left: unset;
-    }
+  #output-container {
+    position: absolute;
+    margin: 0;
+    bottom: 0;
+    top: unset;
+    left: 0;
+    right: 0;
+    width: unset;
+    height: 75px;
+  }
 
-    button {
-        position: absolute;
-        top: 51px;
-        right: 30px;
-    }
+  #progress-bar {
+    top: 20px;
+    right: 45px;
+    height: 8px;
+  }
 
-    .container {
-        padding-right: unset;
-    }
+  #timer {
+    top: 25px;
+    font-size: 15px;
+  }
 
-    #output-container  {
-        position: absolute;
-        margin: 0;
-        bottom: 0;
-        top: unset;
-        left: 0;
-        right: 0;
-        width: unset;
-        height: 75px;
-    }
+  #status-text {
+    top: 25px;
+    right: 45px;
+    font-size: 15px;
+  }
 
-    #progress-bar {
-        top: 20px;
-        right: 45px;
-        height: 8px;
-    }
-
-    #timer {
-        top: 25px;
-        font-size: 15px;
-    }
-
-    #status-text {
-        top: 25px;
-        right: 45px;
-        font-size: 15px;
-    }
-
-    #workflow-cancel-run-icon {
-        top: 10px;
-        right: 10px;
-        font-size: 22px;
-    }
-
-    #inputs {
-        width: 100%;
-        padding: 0px 50px;
-        margin: unset;
-    }
-
-    input {
-        width: 100%;
-    }
-
-    #inputs .section {
-        margin-right: unset;
-        padding-left: unset;
-    }
+  #workflow-cancel-run-icon {
+    top: 10px;
+    right: 10px;
+    font-size: 22px;
+  }
 }
 
 :disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
+  opacity: 0.5;
+  cursor: not-allowed;
 }
